--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "vipsports.wee.bet": "gulp vipsports.wee.bet",
+    "vipsports.digital": "gulp vipsports.digital",
     "betsbr.club": "gulp betsbr.club",
     "casadinha.bet": "gulp casadinha.bet",
     "demo.wee.bet": "gulp demo.wee.bet",
@@ -68,7 +68,7 @@
     "goldeplaca.wee.bet": "gulp goldeplaca.wee.bet",
     "xbetsports.net": "gulp xbetsports.net",
     "betsnordeste.site": "gulp betsnordeste.site",
-    "esportebet.wee.bet": "gulp esportebet.wee.bet",
+    "monteirosports.com": "gulp monteirosports.com",
     "i2bets.com": "gulp i2bets.com",
     "lancesports.site": "gulp lancesports.site",
     "betimperativoo.com.br": "gulp betimperativoo.com.br",
@@ -94,7 +94,7 @@
     "cr7bet.online": "gulp cr7bet.online",
     "easybets.club": "gulp easybets.club",
     "apostasmax.com": "gulp apostasmax.com",
-    "ritsbet.wee.bet": "gulp ritsbet.wee.bet",
+    "expressinhofc.com.br": "gulp expressinhofc.com.br",
     "santissports.com": "gulp santissports.com",
     "bomba.bet": "gulp bomba.bet",
     "pointbet.bet": "gulp pointbet.bet",
