--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "starbets.online": "gulp starbets.online",
     "dfsgoo.com": "gulp dfsgoo.com",
     "betfacil123.app": "gulp betfacil123.app",
-    "goldeplaca.wee.bet": "gulp goldeplaca.wee.bet",
+    "goldeplaca.net.br": "gulp goldeplaca.net.br",
     "xbetsports.net": "gulp xbetsports.net",
     "betsnordeste.site": "gulp betsnordeste.site",
     "monteirosports.com": "gulp monteirosports.com",
