--- a/package.json
+++ b/package.json
@@ -199,7 +199,8 @@
     "26sports.bet": "gulp 26sports.bet",
     "vitoriasports.vip": "gulp vitoriasports.vip",
     "dentrodaaposta.com": "gulp dentrodaaposta.com",
-    "deubet.io": "gulp deubet.io"
+    "deubet.io": "gulp deubet.io",
+    "betcapital.com": "gulp betcapital.com"
   },
   "private": true,
   "dependencies": {
