--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "futpix.online": "gulp futpix.online",
     "betminas.club": "gulp betminas.club",
     "sandbox.wee.bet": "gulp sandbox.wee.bet",
-    "bet83.wee.bet": "gulp bet83.wee.bet",
+    "bet83.com.br": "gulp bet83.com.br",
     "betnordeste.net": "gulp betnordeste.net",
     "iconebet.com": "gulp iconebet.com",
     "sportingol.bet": "gulp sportingol.bet",
