feat: update to angular 17

--- a/angular.json
+++ b/angular.json
@@ -97,11 +97,11 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "weebet-client:build:production"
+                          "buildTarget": "weebet-client:build:production"
                         },
                         "development": {
-                            "browserTarget": "weebet-client:build:development",
-                            "disableHostCheck": true
+                          "disableHostCheck": true,
+                            "buildTarget": "weebet-client:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -109,7 +109,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "weebet-client:build"
+                      "buildTarget": "weebet-client:build"
                     }
                 },
                 "test": {
