--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
     "poc.wee.bet": "gulp poc.wee.bet",
     "bet10.bet": "gulp bet10.bet",
     "pintou.bet": "gulp pintou.bet",
-    "boaaposta.com": "gulp boaaposta.com",
+    "boaaposta.net": "gulp boaaposta.net",
     "copasbet.bet": "gulp copasbet.bet",
     "boasorte.bet": "gulp boasorte.bet",
     "eliteesportes.vip": "gulp eliteesportes.vip",
