--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "pixplay.io": "gulp pixplay.io",
     "sortegol.bet": "gulp sortegol.bet",
     "betcombinada.net": "gulp betcombinada.net",
-    "gramado.bet": "gulp gramado.bet",
+    "gramadobet.net.br": "gulp gramadobet.net.br",
     "goalb.net": "gulp goalb.net",
     "sortegol.com": "gulp sortegol.com",
     "gli.wee.bet": "gulp gli.wee.bet",
