--- a/package.json
+++ b/package.json
@@ -203,9 +203,9 @@
   },
   "private": true,
   "dependencies": {
-    "@abacritt/angularx-social-login": "2.1",
+    "@abacritt/angularx-social-login": "2.3",
     "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^15.2.9",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.13",
     "@angular/compiler": "^18.2.13",
     "@angular/core": "^18.2.13",
@@ -217,7 +217,7 @@
     "@angular/service-worker": "^18.2.13",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@iconscout/unicons": "^4.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
@@ -240,17 +240,17 @@
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.13",
     "ng-hcaptcha": "2.4.x",
-    "ng-qrcode": "^16.0.0",
+    "ng-qrcode": "^18.0.0",
     "ng-recaptcha": "^12.0.0",
     "ng2-charts": "^3.1.2",
     "ngx-clipboard": "^15.1.0",
-    "ngx-currency": "^4.0.0",
-    "ngx-mask": "^16.4.2",
-    "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-currency": "^18.0.0",
+    "ngx-mask": "^18.0.4",
+    "ngx-owl-carousel-o": "^18.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-print": "1.4",
     "ngx-skeleton-loader": "^6.0.0",
-    "ngx-toastr": "^16.2.0",
+    "ngx-toastr": "^18.0.0",
     "pdfmake": "^0.2.6",
     "pwa-install-handler": "^2.6.2",
     "remixicon": "^4.2.0",
@@ -287,5 +287,10 @@
     "tslint": "~6.1.0",
     "typescript": "~5.4.5",
     "webpack-bundle-analyzer": "^4.4.2"
+  },
+  "overrides": {
+    "ng-recaptcha": {
+      "@angular/core": "^18.0.0"
+    }
   }
 }
