--- a/package.json
+++ b/package.json
@@ -201,7 +201,8 @@
     "dentrodaaposta.com": "gulp dentrodaaposta.com",
     "deubet.io": "gulp deubet.io",
     "betcapital.com": "gulp betcapital.com",
-    "sporte.vip": "gulp sporte.vip"
+    "sporte.vip": "gulp sporte.vip",
+    "vaibet360.com": "vaibet360.com"
   },
   "private": true,
   "dependencies": {
