--- a/package.json
+++ b/package.json
@@ -201,9 +201,7 @@
     "dentrodaaposta.com": "gulp dentrodaaposta.com",
     "deubet.io": "gulp deubet.io",
     "betcapital.com": "gulp betcapital.com",
-    "sporte.vip": "gulp sporte.vip",
-    "vaibet360.com": "gulp vaibet360.com",
-    "sortebet777.com": "gulp sortebet777.com"
+    "sporte.vip": "gulp sporte.vip"
   },
   "private": true,
   "dependencies": {
