--- a/package.json
+++ b/package.json
@@ -203,7 +203,8 @@
     "betcapital.com": "gulp betcapital.com",
     "sporte.vip": "gulp sporte.vip",
     "vaibet360.com": "gulp vaibet360.com",
-    "sortebet777.com": "gulp sortebet777.com"
+    "sortebet777.com": "gulp sortebet777.com",
+    "3betco.com.br": "gulp 3betco.com.br"
   },
   "private": true,
   "dependencies": {
