deploy: sportingnet.bet

--- a/package.json
+++ b/package.json
@@ -205,7 +205,8 @@
     "vaibet360.com": "gulp vaibet360.com",
     "sortebet777.com": "gulp sortebet777.com",
     "3betco.com.br": "gulp 3betco.com.br",
-    "apostacerta.bet": "gulp apostacerta.bet"
+    "apostacerta.bet": "gulp apostacerta.bet",
+    "sportingnet.bet": "gulp sportingnet.bet"
   },
   "private": true,
   "dependencies": {
