deploy: brasavipcassino.net

--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "sortebet777.com": "gulp sortebet777.com",
     "3betco.com.br": "gulp 3betco.com.br",
     "apostacerta.bet": "gulp apostacerta.bet",
-    "sportingnet.bet": "gulp sportingnet.bet"
+    "brasavipcassino.net": "gulp brasavipcassino.net"
   },
   "private": true,
   "dependencies": {
