zedocash.bet para zedocash.cash

--- a/package.json
+++ b/package.json
@@ -191,7 +191,7 @@
     "betfortuna.com.br": "gulp betfortuna.com.br",
     "paraisobet.net": "gulp paraisobet.net",
     "betmania.casino": "gulp betmania.casino",
-    "zedocash.bet": "gulp zedocash.bet",
+    "zedocash.cash": "gulp zedocash.cash",
     "timedasorte.com": "gulp timedasorte.com",
     "bet1000.net.br": "gulp bet1000.net.br",
     "26sports.bet": "gulp 26sports.bet",
