sportvips.bet para sportvip.bet

--- a/package.json
+++ b/package.json
@@ -186,7 +186,7 @@
     "boasorte.bet": "gulp boasorte.bet",
     "eliteesportes.vip": "gulp eliteesportes.vip",
     "joguefacil.bet": "gulp joguefacil.bet",
-    "sportvips.bet": "gulp sportvips.bet",
+    "sportvip.bet": "gulp sportvip.bet",
     "condutaesp.com": "gulp condutaesp.com",
     "betfortuna.com.br": "gulp betfortuna.com.br",
     "paraisobet.net": "gulp paraisobet.net",
