deploy: arretadobet.com

--- a/package.json
+++ b/package.json
@@ -205,7 +205,8 @@
     "3betco.com.br": "gulp 3betco.com.br",
     "apostacerta.bet": "gulp apostacerta.bet",
     "brasavipcassino.net": "gulp brasavipcassino.net",
-    "betsplay.club": "gulp betsplay.club"
+    "betsplay.club": "gulp betsplay.club",
+    "arretadobet.com": "arretadobet.com"
   },
   "private": true,
   "dependencies": {
