deploy: avante.bet

--- a/package.json
+++ b/package.json
@@ -206,7 +206,8 @@
     "apostacerta.bet": "gulp apostacerta.bet",
     "brasavipcassino.net": "gulp brasavipcassino.net",
     "betsplay.club": "gulp betsplay.club",
-    "arretadobet.com": "arretadobet.com"
+    "arretadobet.com": "arretadobet.com",
+    "avante.bet": "avante.bet"
   },
   "private": true,
   "dependencies": {
