deploy: apostecerto.io

--- a/package.json
+++ b/package.json
@@ -207,7 +207,8 @@
     "arretadobet.com": "gulp arretadobet.com",
     "avante.bet": "gulp avante.bet",
     "decolabet.com": "gulp decolabet.com",
-    "betvem.io": "gulp betvem.io"
+    "betvem.io": "gulp betvem.io",
+    "apostecerto.io": "gulp apostecerto.io"
   },
   "private": true,
   "dependencies": {
