--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "kwbet.net": "gulp kwbet.net",
     "apostenasorte.bet": "gulp apostenasorte.bet",
     "ultrabetss.com": "gulp ultrabetss.com",
+    "ultrabetss.bet": "gulp ultrabetss.bet",
     "betbras.com": "gulp betbras.com",
     "capitalbets.bet": "gulp capitalbets.bet",
     "betinvestidor.com": "gulp betinvestidor.com",
