--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "primoos.bet": "gulp primoos.bet",
     "realgol.net": "gulp realgol.net",
     "pinplay.bet": "gulp pinplay.bet",
+    "pinplay.net": "gulp pinplay.net",
     "3tbet.com.br": "gulp 3tbet.com.br",
     "megasports.bet": "gulp megasports.bet",
     "81br.net": "gulp 81br.net",
