--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "globoesporte.bet": "gulp globoesporte.bet",
     "chutebets.com.br": "gulp chutebets.com.br",
     "ingamesport.com": "gulp ingamesport.com",
-    "ingamebet.com": "gulp ingamebet.com",
+    "ingamedasorte.com": "gulp ingamedasorte.com",
     "garanhunsbet.site": "gulp garanhunsbet.site",
     "cearabetsplacardarodada.site": "gulp cearabetsplacardarodada.site",
     "rrbets.site": "gulp rrbets.site",
