setedasorte.com.br

--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "betstar.vip": "gulp betstar.vip",
     "multisports.bet": "gulp multisports.bet",
     "brinksbet.com": "gulp brinksbet.com",
-    "betbastet.com": "gulp betbastet.com",
+    "setedasorte.com.br": "gulp setedasorte.com.br",
     "asortebets.com": "gulp asortebets.com",
     "proesporte.net": "gulp proesporte.net",
     "unibets.com.br": "gulp unibets.com.br",
