migrando esportebetsvip.com para esportebets.io

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "vitoriasports.bet": "gulp vitoriasports.bet",
     "footbets.net": "gulp footbets.net",
     "rblt.me": "gulp rblt.me",
-    "esportebetsvip.com": "gulp esportebetsvip.com",
+    "esportebets.io": "gulp esportebets.io",
     "mastersports.bet": "gulp mastersports.bet",
     "megasports.club": "gulp megasports.club",
     "alfasports.net": "gulp alfasports.net",
