betmasteroficial migrate to jubet.bet

--- a/package.json
+++ b/package.json
@@ -196,7 +196,7 @@
     "maraplay.bet": "gulp maraplay.bet",
     "hotbetz.bet": "gulp hotbetz.bet",
     "betpix77.io": "gulp betpix77.io",
-    "betmasteroficial.net": "gulp betmasteroficial.net",
+    "jubet.bet": "gulp jubet.bet",
     "cr7bet.online": "gulp cr7bet.online",
     "starkbet.casino": "gulp starkbet.casino"
   },
