--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@storybook/addon-docs": "^9.1.2",
+    "@storybook/addon-styling-webpack": "^2.0.0",
+    "@storybook/addon-themes": "^9.1.2",
     "@storybook/vue3-vite": "^9.1.2",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
@@ -26,6 +28,8 @@
     "@vue/tsconfig": "^0.7.0",
     "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.4",
+    "sass": "^1.90.0",
+    "sass-embedded": "^1.90.0",
     "storybook": "^9.1.2",
     "typescript": "~5.8.0",
     "vite": "^6.0.7",
