--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "wee-ui-library": "^0.0.9"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.90.0"
   }
 }
