--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "weebet-storybook",
-  "version": "0.0.0",
-  "private": true,
+  "name": "wee-ui-library",
+  "version": "0.0.9",
+  "main": "./dist/wee-ui-library.umd.js",
+  "module": "./dist/wee-ui-library.es.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/wee-ui-library.es.js",
+      "require": "./dist/wee-ui-library.umd.js",
+      "default": "./dist/wee-ui-library.css"
+    },
+    "./dist/wee-ui-library.css": "./dist/wee-ui-library.css"
+  },
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "storybook dev -p 5001 --no-open",
-    "build": "storybook build",
+    "storybook:dev": "storybook dev -p 5001 --no-open",
+    "storybook:build": "storybook build",
+    "build": "vue-tsc --noEmit && vite build",
     "docker:dev": "docker compose -f docker-compose.yml up --build",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "publish": "npm run build && npm publish --access public"
   },
-  "dependencies": {
-    "vue": "^2.7.0 || ^3.5.18"
+  "peerDependencies": {
+    "vue": "^3.5.18",
+    "vue-demi": "^0.14.10"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^9.1.2",
@@ -23,6 +39,7 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.16.5",
+    "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
