fix: forced prefetch in pwa app

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
                           "@angular/localize/init"
                         ],
                         "assets": [
+                          "src/ngsw-worker-minimal.js",
                           "src/assets",
                           "src/locale",
                           "src/favicon.ico",
