--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -28,16 +28,17 @@
     }
   ],
   "dataGroups": [
-    {   "name": "bilhete",
-        "urls": [
-            "/bilhete/**"
-        ],
-        "cacheConfig": {
-            "strategy": "freshness",
-            "maxSize": 100,
-            "maxAge": "1h",
-            "timeout": "30s"
-        }
+    {
+      "name": "bilhete",
+      "urls": [
+        "/bilhete/**"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 100,
+        "maxAge": "1h",
+        "timeout": "30s"
+      }
     }
   ]
 }
