--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-demi": "^0.14.10"
   },
   "devDependencies": {
+    "vue": "^3.5.18",
     "@storybook/addon-docs": "^9.1.2",
     "@storybook/addon-styling-webpack": "^2.0.0",
     "@storybook/addon-themes": "^9.1.2",
