--- a/.github/workflows/build-app-cambista.yml
+++ b/.github/workflows/build-app-cambista.yml
@@ -1,4 +1,4 @@
-name: Custom API Deploy
+name: Build/Generate App
 
 on:
   workflow_dispatch:
@@ -17,15 +17,6 @@ on:
         required: true
       APP_SPLASH_COLOR:
         description: 'App Splash Color'
-        required: true
-      APP_FILE:
-        description: 'App File Path'
-        required: true
-      S3_BUCKET:
-        description: 'S3 Bucket URL'
-        required: true
-      APP_OUT:
-        description: 'App Output Path'
         required: true
 
 jobs:
@@ -105,4 +96,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp ${{ github.event.inputs.APP_FILE }} ${{ github.event.inputs.S3_BUCKET }}${{ github.event.inputs.APP_OUT }} --acl public-read
+        run: aws s3 cp ./build/app/outputs/flutter-apk/app.apk ${{ secrets.S3_BUCKET }}/apk.weebet.tech/app.apk --acl public-read
