--- a/.github/workflows/build-app-cambista.yml
+++ b/.github/workflows/build-app-cambista.yml
@@ -3,6 +3,10 @@ name: Build/Generate App
 on:
   workflow_dispatch:
     inputs:
+      BRANCH:
+        description: 'Branch to build'
+        required: true
+        default: 'main'
       APP_ID:
         description: 'Application ID'
         required: true
