--- a/.github/workflows/build-app-cambista.yml
+++ b/.github/workflows/build-app-cambista.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.3.10'
 
       - name: Get Flutter dependencies
         run: flutter pub get
