chore: add pin.bet.br configuration in deploy file

--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "betagora.io": "gulp betagora.io",
     "megapix.bet": "gulp megapix.bet",
     "pinbet.bet": "gulp pinbet.bet",
+    "pin.bet.br": "gulp pin.bet.br",
     "emirates365.bet": "gulp emirates365.bet",
     "topbets.site": "gulp topbets.site",
     "amabet.bet": "gulp amabet.bet",
